# anamoly-detection-localexplainer-agent

./: Anamoly detection localexplainer project.md  Makefile  README.md
backend/: pyproject.toml
backend/app/: config.py  main.py
backend/app/agent/: graph.py  state.py
backend/app/agent/nodes/: interpret.py  lime_tool.py  pdp_tool.py  predict.py  shap_tool.py
backend/app/routers/: explain.py  upload.py
backend/app/services/: llm_client.py  model_loader.py  plot_generator.py  schema_validator.py
backend/tests/: conftest.py  test_agent_e2e.py  test_edge_cases.py  test_graph.py  test_interpret.py  test_lime_tool.py  test_pdp_tool.py  test_predict.py  test_schema_validator.py  test_shap_tool.py
frontend/: next.config.ts
frontend/src/api/: client.ts
frontend/src/app/: layout.tsx  page.tsx
frontend/src/components/: ExplanationSummary.tsx  FeatureTable.tsx  LoadingState.tsx  ModelUpload.tsx  PlotViewer.tsx  PredictionBadge.tsx  RecordInput.tsx  SchemaEditor.tsx
frontend/src/context/: AppContext.tsx
frontend/src/types/: index.ts
notebooks/: demo_walkthrough.ipynb
